@@ -16,11 +16,11 @@
 	along with this program; if not, write to the Free Software
 	Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  */
-package org.hip.vif.core.bom.impl;
+package org.hip.vif.core.bom.impl; // NOPMD
 
 import java.sql.SQLException;
+import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Vector;
 
 import javax.mail.internet.AddressException;
 import javax.mail.internet.InternetAddress;
@@ -75,7 +75,7 @@ public class GroupImpl extends DomainObjectImpl implements Group {
     }
 
     /** Insert a new entry and save the data.
-     * 
+     *
      * @param inName java.lang.String
      * @param inDescription java.lang.String
      * @param inReviewers java.lang.String
@@ -86,11 +86,11 @@ public class GroupImpl extends DomainObjectImpl implements Group {
      * @exception org.hip.vif.core.exc.bom.impl.BOMChangeValueException
      * @exception org.hip.vif.core.exc.bom.impl.ExternIDNotUniqueException */
     @Override
-    public Long ucNew(final String inName, final String inDescription,
+    public Long ucNew(final String inName, final String inDescription, // NOPMD
             final String inReviewers, final String inGuestDepth,
             final String inMinGoupSize, final boolean inIsPrivate)
             throws BOMChangeValueException, ExternIDNotUniqueException {
-        Long outGroupID = new Long(0);
+        Long outGroupID = Long.valueOf(0);
         preCheck(inName, inDescription);
 
         if (checkIdUnique(inName)) {
@@ -98,47 +98,43 @@ public class GroupImpl extends DomainObjectImpl implements Group {
                     inMinGoupSize, inIsPrivate ? GroupHome.IS_PRIVATE
                             : GroupHome.IS_PUBLIC);
             try {
-                set(GroupHome.KEY_STATE, new Long(1));
+                set(GroupHome.KEY_STATE, Long.valueOf(1));
                 outGroupID = insert(true);
-            } catch (final VException exc) {
-                throw new BOMChangeValueException(exc.getMessage());
-            } catch (final SQLException exc) {
-                throw new BOMChangeValueException(exc.getMessage());
+            } catch (final VException | SQLException exc) {
+                throw new BOMChangeValueException(exc.getMessage(), exc);
             }
 
             // save group administrators?
 
         } else {
             throw new ExternIDNotUniqueException(String.format(
-                    "Group-Name %s not unique", inName));
+                    "Group-Name %s not unique", inName)); // NOPMD
         }
         return outGroupID;
     }
 
     /** Insert a new entry and save the data.
-     * 
+     *
      * @return Long the ID of the new group entry
      * @throws BOMChangeValueException
      * @throws ExternIDNotUniqueException */
     @Override
     public Long ucNew() throws BOMChangeValueException,
             ExternIDNotUniqueException {
-        Long outGroupID = new Long(0);
+        Long outGroupID = Long.valueOf(0);
         String lName = "";
         boolean lIdUnique = true;
         try {
             lName = get(GroupHome.KEY_NAME).toString();
             preCheck(lName, get(GroupHome.KEY_DESCRIPTION).toString());
             if (checkIdUnique(lName)) {
-                set(GroupHome.KEY_STATE, new Long(1));
+                set(GroupHome.KEY_STATE, Long.valueOf(1));
                 outGroupID = insert(true);
             } else {
                 lIdUnique = false;
             }
-        } catch (final SQLException exc) {
-            throw new BOMChangeValueException(exc.getMessage());
-        } catch (final VException exc) {
-            throw new BOMChangeValueException(exc.getMessage());
+        } catch (final SQLException | VException exc) {
+            throw new BOMChangeValueException(exc.getMessage(), exc);
         }
         if (!lIdUnique) {
             throw new ExternIDNotUniqueException(String.format(
@@ -148,7 +144,7 @@ public class GroupImpl extends DomainObjectImpl implements Group {
     }
 
     /** Update a discussion group entry .
-     * 
+     *
      * @param inName java.lang.String
      * @param inDescription java.lang.String
      * @param inReviewers java.lang.String
@@ -159,13 +155,13 @@ public class GroupImpl extends DomainObjectImpl implements Group {
      * @exception WorkflowException
      * @throws ExternIDNotUniqueException */
     @Override
-    public void ucSave(final String inName, final String inDescription,
+    public void ucSave(final String inName, final String inDescription, // NOPMD
             final String inReviewers, final String inGuestDepth,
             final String inMinGoupSize, final boolean inIsPrivate)
             throws VException, WorkflowException, ExternIDNotUniqueException {
         preCheck(inName, inDescription);
 
-        if (!compareID(inName) && !checkIdUnique(inName)) {
+        if (!compareID(inName) && !checkIdUnique(inName)) { // NOPMD
             throw new ExternIDNotUniqueException(String.format(
                     "Group-Name %s not unique", inName));
         } else {
@@ -205,27 +201,27 @@ public class GroupImpl extends DomainObjectImpl implements Group {
                 }
             }
         } catch (final SQLException exc) {
-            throw new BOMChangeValueException(exc.getMessage());
+            throw new BOMChangeValueException(exc.getMessage(), exc);
         }
     }
 
     /** Workflow aware subclasses may override.
-     * 
+     *
      * @param inTransitionName
      * @param inArgs
      * @throws WorkflowException */
     public void doTransition(final String inTransitionName,
-            final Object[] inArgs) throws WorkflowException {
+            final Object... inArgs) throws WorkflowException {
         // intentionally left empty
     }
 
     @Override
-    public void ucSave(final String inGroupNameBefore,
+    public void ucSave(final String inGroupNameBefore, // NOPMD
             final int inMinGroupSizeBefore) throws VException,
             WorkflowException, ExternIDNotUniqueException {
         final String lName = get(GroupHome.KEY_NAME).toString();
         preCheck(lName, get(GroupHome.KEY_DESCRIPTION).toString());
-        if (!compareID(inGroupNameBefore) && !checkIdUnique(lName)) {
+        if (!compareID(inGroupNameBefore) && !checkIdUnique(lName)) { // NOPMD
             throw new ExternIDNotUniqueException(String.format(
                     "Group-Name %s not unique", lName));
         } else {
@@ -237,7 +233,7 @@ public class GroupImpl extends DomainObjectImpl implements Group {
     }
 
     /** Asserts the existence of mandatory input
-     * 
+     *
      * @param inName java.lang.String
      * @param inDescription java.lang.String */
     private void preCheck(final String inName, final String inDescription) {
@@ -251,21 +247,24 @@ public class GroupImpl extends DomainObjectImpl implements Group {
 
     }
 
-    private void setValues(final String inName, final String inDescription,
+    private void setValues(final String inName, final String inDescription, // NOPMD
             final String inReviewers, final String inGuestDepth,
             final String inMinGoupSize, final Integer inPrivate)
             throws BOMChangeValueException {
         // the specified GroupID does not exist yet, therefore, we can continue
-        Long lReviewers = new Long(DEFAULT_REVIEWERS);
-        Long lGuestDepth = new Long(DEFAULT_GUEST_DEPTH);
-        Long lMinGoupSize = new Long(DEFAULT_MIN_GROUP_SIZE);
+        Long lReviewers = Long.valueOf(DEFAULT_REVIEWERS);
+        Long lGuestDepth = Long.valueOf(DEFAULT_GUEST_DEPTH);
+        Long lMinGoupSize = Long.valueOf(DEFAULT_MIN_GROUP_SIZE);
 
-        if (!"".equals(inReviewers))
-            lReviewers = new Long(inReviewers);
-        if (!"".equals(inGuestDepth))
-            lGuestDepth = new Long(inGuestDepth);
-        if (!"".equals(inMinGoupSize))
-            lMinGoupSize = new Long(inMinGoupSize);
+        if (!inReviewers.isEmpty()) {
+            lReviewers = Long.valueOf(inReviewers);
+        }
+        if (!inGuestDepth.isEmpty()) {
+            lGuestDepth = Long.valueOf(inGuestDepth);
+        }
+        if (!inMinGoupSize.isEmpty()) {
+            lMinGoupSize = Long.valueOf(inMinGoupSize);
+        }
 
         try {
             set(GroupHome.KEY_NAME, inName);
@@ -273,9 +272,9 @@ public class GroupImpl extends DomainObjectImpl implements Group {
             set(GroupHome.KEY_REVIEWERS, lReviewers);
             set(GroupHome.KEY_GUEST_DEPTH, lGuestDepth);
             set(GroupHome.KEY_MIN_GROUP_SIZE, lMinGoupSize);
-            set(GroupHome.KEY_PRIVATE, new Long(inPrivate));
+            set(GroupHome.KEY_PRIVATE, Long.valueOf(inPrivate));
         } catch (final SettingException exc) {
-            throw new BOMChangeValueException(exc.getMessage());
+            throw new BOMChangeValueException(exc.getMessage(), exc);
         }
     }
 
@@ -285,10 +284,8 @@ public class GroupImpl extends DomainObjectImpl implements Group {
         final KeyObject lKeyGroupID = new KeyObjectImpl();
         try {
             lKeyGroupID.setValue(GroupHome.KEY_NAME, inGroupID);
-        } catch (final VInvalidNameException exc) {
-            throw new BOMChangeValueException(exc.getMessage());
-        } catch (final VInvalidValueException exc) {
-            throw new BOMChangeValueException(exc.getMessage());
+        } catch (final VInvalidNameException | VInvalidValueException exc) {
+            throw new BOMChangeValueException(exc.getMessage(), exc);
         }
 
         // check whether the key exists yet
@@ -305,7 +302,7 @@ public class GroupImpl extends DomainObjectImpl implements Group {
     }
 
     /** Returns true if the specified external GroupID is the same as this entry's external GroupID
-     * 
+     *
      * @param inGroupID java.lang.String
      * @return boolean True if equal */
     private boolean compareID(final String inGroupID) {
@@ -317,7 +314,7 @@ public class GroupImpl extends DomainObjectImpl implements Group {
     }
 
     /** Returns the number of root questions attached to this group.
-     * 
+     *
      * @return int */
     @Override
     public int rootCount() throws SQLException, VException {
@@ -329,7 +326,7 @@ public class GroupImpl extends DomainObjectImpl implements Group {
 
     /** Returns true if this group is of type where the contributions need to be reviewed (i.e. the number of reviewers
      * is set > 0).
-     * 
+     *
      * @return true, if the contributions have to be reviewed.
      * @throws VException */
     @Override
@@ -338,7 +335,7 @@ public class GroupImpl extends DomainObjectImpl implements Group {
     }
 
     /** Returns true if this group is private.
-     * 
+     *
      * @return boolean True if this group is private.
      * @throws VException */
     @Override
@@ -347,14 +344,14 @@ public class GroupImpl extends DomainObjectImpl implements Group {
     }
 
     /** Returns a collection of possible transitions contingent on this group's state.
-     * 
+     *
      * @return Collection of transitions
      * @throws VException */
     @Override
     public Collection<String> getTransitions() throws VException {
         final int lState = Integer
                 .parseInt(get(GroupHome.KEY_STATE).toString());
-        final Collection<String> outTransitions = new Vector<String>();
+        final Collection<String> outTransitions = new ArrayList<String>();
         switch (lState) {
         case VIFGroupWorkflow.S_CREATED:
             outTransitions.add(VIFGroupWorkflow.TRANS_OPEN);
@@ -378,12 +375,13 @@ public class GroupImpl extends DomainObjectImpl implements Group {
         case VIFGroupWorkflow.S_CLOSED:
             outTransitions.add(VIFGroupWorkflow.TRANS_REACTIVATE);
             break;
+        default:
         }
         return outTransitions;
     }
 
     /** Returns the correct type of closing transition according to this group's state.
-     * 
+     *
      * @return
      * @throws VException */
     @Override
@@ -395,12 +393,13 @@ public class GroupImpl extends DomainObjectImpl implements Group {
             return VIFGroupWorkflow.TRANS_CLOSE2;
         case VIFGroupWorkflow.S_SETTLED:
             return VIFGroupWorkflow.TRANS_CLOSE3;
+        default:
         }
         return VIFGroupWorkflow.TRANS_CLOSE1;
     }
 
     /** Returns the correct type of reactivating transition according to this group's state.
-     * 
+     *
      * @return String
      * @throws VException */
     @Override
@@ -416,22 +415,23 @@ public class GroupImpl extends DomainObjectImpl implements Group {
             } else {
                 return VIFGroupWorkflow.TRANS_REOPEN;
             }
+        default:
         }
         return VIFGroupWorkflow.TRANS_REACTIVATE1;
     }
 
     /** Returns the number of participants registered to this group.
-     * 
+     *
      * @return int The number of registered participants.
      * @throws VException */
     @Override
     public int getNumberOfRegistered() throws VException {
         return BOMHelper.getParticipantHome().getParticipantsOfGroup(
-                new Long(get(GroupHome.KEY_ID).toString()));
+                Long.valueOf(get(GroupHome.KEY_ID).toString()));
     }
 
     /** Returns the minimal number of participants needed for this group to be active.
-     * 
+     *
      * @return int The minimal group size
      * @throws GettingException */
     @Override
@@ -442,12 +442,12 @@ public class GroupImpl extends DomainObjectImpl implements Group {
     /** Returns the group's visibility, i.e. the depth a unauthenticated user (that is a guest) can see questions. 0
      * means the whole group is invisible for guests, 1 means only the group's root question is visible, 2 means only
      * the root question and the first level of follow up questions is visible, ...
-     * 
+     *
      * @return Long
      * @throws GettingException */
     @Override
     public Long getGuestDepth() throws GettingException {
-        return new Long(get(GroupHome.KEY_GUEST_DEPTH).toString());
+        return Long.valueOf(get(GroupHome.KEY_GUEST_DEPTH).toString());
     }
 
     private String getActualStateValue() throws GettingException {
@@ -455,7 +455,7 @@ public class GroupImpl extends DomainObjectImpl implements Group {
     }
 
     /** Checks whether this group in the state just created.
-     * 
+     *
      * @return boolean <code>true</code> if the group has just been created.
      * @throws GettingException */
     @Override
@@ -464,7 +464,7 @@ public class GroupImpl extends DomainObjectImpl implements Group {
     }
 
     /** Checks whether this group is active.
-     * 
+     *
      * @return boolean True if this group is active.
      * @throws GettingException */
     @Override
@@ -473,7 +473,7 @@ public class GroupImpl extends DomainObjectImpl implements Group {
     }
 
     /** Checks whether this group is open.
-     * 
+     *
      * @return boolean True if this group is open.
      * @throws GettingException */
     private boolean isOpen() throws GettingException {
@@ -481,19 +481,19 @@ public class GroupImpl extends DomainObjectImpl implements Group {
     }
 
     /** Checks whether the specified actor is participant in this group.
-     * 
+     *
      * @param inActorID Long
      * @return boolean True if the actor is participant.
      * @throws VException */
     @Override
     public boolean isParticipant(final Long inActorID) throws VException {
         return BOMHelper.getParticipantHome().isParticipantOfGroup(
-                new Long(get(GroupHome.KEY_ID).toString()), inActorID);
+                Long.valueOf(get(GroupHome.KEY_ID).toString()), inActorID);
     }
 
     /** Checks the group's activation state against the specified value. If the number exceeds the minimal group size,
      * the group is activated.
-     * 
+     *
      * @param inRegistered Number of registered members of this group.
      * @throws GettingException
      * @throws WorkflowException */
@@ -511,14 +511,14 @@ public class GroupImpl extends DomainObjectImpl implements Group {
     }
 
     /** Subclasses may override.
-     * 
+     *
      * @throws WorkflowException */
     protected void doActivation() throws WorkflowException {
         // intentionally left empty
     }
 
     /** Returns a array of the mail addresses of this group's participants.
-     * 
+     *
      * @return InternetAddress[]
      * @throws VException
      * @throws SQLException
@@ -528,7 +528,7 @@ public class GroupImpl extends DomainObjectImpl implements Group {
             SQLException, AddressException {
         final Collection<String> lMails = BOMHelper
                 .getJoinParticipantToMemberHome().getParticipantsMail(
-                        new Long(get(GroupHome.KEY_ID).toString()));
+                        Long.valueOf(get(GroupHome.KEY_ID).toString()));
         final StringBuffer lAddresses = new StringBuffer();
         boolean lFirst = true;
         for (final String lMailAddress : lMails) {
@@ -542,23 +542,19 @@ public class GroupImpl extends DomainObjectImpl implements Group {
     }
 
     @Override
-    public boolean isDeletable() throws VException {
+    public boolean isDeletable() throws VException { // NOPMD
         final String lState = get(GroupHome.KEY_STATE).toString();
         return lState.equals(VIFGroupWorkflow.STATE_CREATED)
                 || lState.equals(VIFGroupWorkflow.STATE_CLOSED);
     }
 
     @Override
-    public boolean isValid() {
+    public boolean isValid() { // NOPMD
         try {
             preCheck(get(GroupHome.KEY_NAME).toString(),
                     get(GroupHome.KEY_DESCRIPTION).toString());
             return true;
-        } catch (final GettingException exc) {
-            return false;
-        } catch (final AssertionFailedError exc) {
-            return false;
-        } catch (final NullPointerException exc) {
+        } catch (final GettingException | AssertionFailedError | NullPointerException exc) { // NOPMD
             return false;
         }
     }
